--- a/index.html
+++ b/index.html
@@ -17,42 +17,55 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./assets/bootstrap-social.css">
 </head>
-	<body class="bg-info text-white">
-		<div class="container text-center">
-			<h1 class="display-1 mt-5">Project Title</h1>
-			<p class="lead mb-5">Coming Soon, subheading</p>
-			<div class="col-lg-6 mx-auto mb-5">
-				<div class="input-group">
-					<input type="text" class="form-control" placeholder="Enter your email for updates" aria-label="Enter your email for updates" name="">
-					<span class="input-group-btn">
-						<button class="btn btn-primary" type="button">Sign up</button>
-					</span>
+	<body>
+		<div class="container text-lg-center">
+			<div class="row justify-content-center">
+				<div class="col-lg-6">
+					<img style="max-height: 150px" src="./assets/CFM-Logo.png" alt="Code For Miami Logo, sunrise on the horizon with waves">
 				</div>
-			</div><!-- /.col-lg-6 -->
-			<div class="col-lg-6 mx-auto mb-5">
-				<p>Social Media message</p>
-				<a class="btn btn-social-icon btn-adn"><span class="fa fa-adn"></span></a>
-				<a class="btn btn-social-icon btn-bitbucket"><span class="fa fa-bitbucket"></span></a>
-				<a class="btn btn-social-icon btn-dropbox"><span class="fa fa-dropbox"></span></a>
-				<a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
-				<a class="btn btn-social-icon btn-flickr"><span class="fa fa-flickr"></span></a>
-				<a class="btn btn-social-icon btn-foursquare"><span class="fa fa-foursquare"></span></a>
-				<a class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
-				<a class="btn btn-social-icon btn-google"><span class="fa fa-google"></span></a>
-				<a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
-				<a class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
-				<a class="btn btn-social-icon btn-microsoft"><span class="fa fa-windows"></span></a>
-				<a class="btn btn-social-icon btn-odnoklassniki"><span class="fa fa-odnoklassniki"></span></a>
-				<a class="btn btn-social-icon btn-openid"><span class="fa fa-openid"></span></a>
-				<a class="btn btn-social-icon btn-pinterest"><span class="fa fa-pinterest"></span></a>
-				<a class="btn btn-social-icon btn-reddit"><span class="fa fa-reddit"></span></a>
-				<a class="btn btn-social-icon btn-soundcloud"><span class="fa fa-soundcloud"></span></a>
-				<a class="btn btn-social-icon btn-tumblr"><span class="fa fa-tumblr"></span></a>
-				<a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
-				<a class="btn btn-social-icon btn-vimeo"><span class="fa fa-vimeo-square"></span></a>
-				<a class="btn btn-social-icon btn-vk"><span class="fa fa-vk"></span></a>
-				<a class="btn btn-social-icon btn-yahoo"><span class="fa fa-yahoo"></span></a>
-			</div><!-- /.col-lg-6 -->
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-lg-6">
+					<h1 class="display-1 mt-5">Project Title</h1>
+					<p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6 mx-auto mb-5">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Enter your email for updates" aria-label="Enter your email for updates" name="">
+						<span class="input-group-btn">
+							<button class="btn btn-success btn-lg" type="button">Sign up</button>
+						</span>
+					</div>
+				</div><!-- /.col-lg-6 -->
+			</div>
+			<div class="row">
+				<div class="col-lg-6 mx-auto mb-5">
+					<p>Social Media message</p>
+					<a class="btn btn-social-icon btn-adn"><span class="fa fa-adn"></span></a>
+					<a class="btn btn-social-icon btn-bitbucket"><span class="fa fa-bitbucket"></span></a>
+					<a class="btn btn-social-icon btn-dropbox"><span class="fa fa-dropbox"></span></a>
+					<a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
+					<a class="btn btn-social-icon btn-flickr"><span class="fa fa-flickr"></span></a>
+					<a class="btn btn-social-icon btn-foursquare"><span class="fa fa-foursquare"></span></a>
+					<a class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
+					<a class="btn btn-social-icon btn-google"><span class="fa fa-google"></span></a>
+					<a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span></a>
+					<a class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
+					<a class="btn btn-social-icon btn-microsoft"><span class="fa fa-windows"></span></a>
+					<a class="btn btn-social-icon btn-odnoklassniki"><span class="fa fa-odnoklassniki"></span></a>
+					<a class="btn btn-social-icon btn-openid"><span class="fa fa-openid"></span></a>
+					<a class="btn btn-social-icon btn-pinterest"><span class="fa fa-pinterest"></span></a>
+					<a class="btn btn-social-icon btn-reddit"><span class="fa fa-reddit"></span></a>
+					<a class="btn btn-social-icon btn-soundcloud"><span class="fa fa-soundcloud"></span></a>
+					<a class="btn btn-social-icon btn-tumblr"><span class="fa fa-tumblr"></span></a>
+					<a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
+					<a class="btn btn-social-icon btn-vimeo"><span class="fa fa-vimeo-square"></span></a>
+					<a class="btn btn-social-icon btn-vk"><span class="fa fa-vk"></span></a>
+					<a class="btn btn-social-icon btn-yahoo"><span class="fa fa-yahoo"></span></a>
+				</div><!-- /.col-lg-6 -->
+			</div>
 		</div>
 	</body>
 </html>
