made bg offwhite and replaced logo with transparent bg

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./assets/bootstrap-social.css">
 </head>
-	<body>
+	<body style="background-color: #f7f7f7">
 		<div class="container text-lg-center">
 			<div class="row justify-content-center">
 				<div class="col-lg-6">
@@ -65,6 +65,9 @@
 					<a class="btn btn-social-icon btn-vk"><span class="fa fa-vk"></span></a>
 					<a class="btn btn-social-icon btn-yahoo"><span class="fa fa-yahoo"></span></a>
 				</div><!-- /.col-lg-6 -->
+			</div>
+			<div class="footer">
+
 			</div>
 		</div>
 	</body>
