--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 				</div><!-- /.col-lg-6 -->
 			</div>
 			<div class="footer">
-
+				<div class="container-fluid p-3 p-md-5">
+					Built with <span class="text-danger">♥️</span> by Code For Miami
+				</div>
 			</div>
 		</div>
 	</body>
