--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="./assets/bootstrap-social.css">
+	<style media="screen">
+		.bg-off-white {
+			background-color: #f7f7f7
+		}
+		.logo {
+			max-height: 150px;
+		}
+	</style>
 </head>
-	<body style="background-color: #f7f7f7">
+	<body class="bg-off-white">
 		<div class="container text-lg-center">
 			<div class="row justify-content-center">
 				<div class="col-lg-6">
-					<img style="max-height: 150px" src="./assets/CFM-Logo.png" alt="Code For Miami Logo, sunrise on the horizon with waves">
+					<img class="logo" src="./assets/CFM-Logo.png" alt="Code For Miami Logo, sunrise on the horizon with waves">
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -30,8 +38,8 @@
 					<p class="lead mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-6 mx-auto mb-5">
+			<div class="row justify-content-center">
+				<div class="col-lg-6 mb-5">
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Enter your email for updates" aria-label="Enter your email for updates" name="">
 						<span class="input-group-btn">
@@ -66,10 +74,10 @@
 					<a class="btn btn-social-icon btn-yahoo"><span class="fa fa-yahoo"></span></a>
 				</div><!-- /.col-lg-6 -->
 			</div>
-			<div class="footer">
-				<div class="container-fluid p-3 p-md-5">
-					Built with <span class="text-danger">♥️</span> by Code For Miami
-				</div>
+		</div>
+		<div class="footer">
+			<div class="container-fluid p-3 p-md-5 text-center">
+				Built with <span class="text-danger">♥️</span> by Code For Miami
 			</div>
 		</div>
 	</body>
