Change button text to subscribe

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control" placeholder="Enter your email for updates" aria-label="Enter your email for updates" name="">
 						<span class="input-group-btn">
-							<button class="btn btn-success btn-lg" type="button">Sign up</button>
+							<button class="btn btn-success btn-lg" type="button">Subscribe</button>
 						</span>
 					</div>
 				</div><!-- /.col-lg-6 -->
